--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
                         </a>
                     </div>
                     <h2 class="brand-before">
-                        <small>Welcome to</small>
+                        <small>Our first mistake!</small>
                     </h2>
-                    <h1 class="brand-name">This GIT Course</h1>
+                    <h1 class="brand-name">Our second mistake!</h1>
                     <hr class="tagline-divider">
                     <h2>
                         <small>By
-                            <strong>WAANDD</strong>
+                            <strong>Our third mistake!</strong>
                         </small>
                     </h2>
                 </div>
